# pythink-toolbox

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  cli.py  docker-compose-ci.yml  docker-compose-tests.yml  docker-compose.yml  mypy.ini  noxfile.py  pylintrc  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-compose-tests.yml  docs.yml  publish_to_pypi.yml
consts/: api_tests.py
docker/api/: Dockerfile  gunicorn_conf.py
docker/base/: Dockerfile
docker/tests/: Dockerfile
docs/: generate_API_doc.sh  generate_api_doc.sh  index.html  openapi.json  spec.js
scripts/: create_activity_sessions_collection.py
src/: activity_events.py  activity_sessions.py  api.py  api_main.py  create_activity_sessions.py  main.py  storage.py  validations.py
src/api/: api.py  helpers.py  user_break_time_daily.py  user_focus_time_daily.py  user_learning_time.py  user_learning_time_daily.py  users_learning_time.py
src/chronos/: __init__.py  activity_events.py  create_activity_sessions.py  custom_types.py  mongodb.py  settings.py  storage.py
src/chronos/activity_sessions/: __init__.py  __main__.py  activity_events.py  activity_events_source.py  create_activity_sessions.py  generation_operations.py  main.py  mongo_io.py  storage.py  storage_operations.py
src/chronos/api/: __main__.py  errors.py  generate_API_doc.py  generate_api_doc.py  main.py  models.py  storage.py  storage_operations.py  user_break_time_daily.py  user_focus_time_daily.py  user_learning_time.py  user_learning_time_daily.py  users_learning_time.py
src/chronos/api/routers/: consts.py  description.py  models.py  user_break_time_daily.py  user_cumulative_learning_time.py  user_focus_time_daily.py  user_learning_time.py  user_learning_time_daily.py  users_break_daily_time.py  users_cumulative_learning_time.py  users_focus_daily_time.py  users_learning_daily_time.py  users_learning_time.py
src/chronos/logger/: logger.py
src/chronos/storage/: mongo_specs.py  schemas.py  specs.py  storage.py
src/chronos/storage/schema_validators/: activity_sessions.json  generations.json  user_generation_failed.json  users_generation_statuses.json
src/pythink_toolbox/: __init__.py  mocking.py
src/testing/: parametrization.py  search_strategies.py
tests/: conftest.py  test_create_activity_sessions.py  test_main.py  test_validating.py  test_validations.py
tests/api/: test_get_user_break_time_daily.py  test_get_user_focus_time_daily.py  test_get_user_learning_time.py  test_get_user_learning_time_daily.py  test_get_users_learning_time.py  url_helpers.py
tests/api/consts/: api_tests.py
tests/test_activity_sessions/: conftest.py  test_activity_events_source.py  test_create_activity_sessions.py  test_creation_transformations.py  test_generation_operations.py  test_main.py  test_mongo_io.py  test_storage_operations.py
tests/test_api/: conftest.py  test_get_user_break_time_daily.py  test_get_user_focus_time_daily.py  test_get_user_learning_time.py  test_get_user_learning_time_daily.py  test_get_users_learning_time.py  test_main.py  test_storage_operations.py
tests/test_api/test_routers/: test_users_break_daily_time.py  test_users_cumulative_learning_time.py  test_users_focus_daily_time.py  test_users_learning_daily_time.py  url_helpers.py  users_learning_daily_time.py
tests/test_testing/: test_mocking.py  test_paramatrization.py
tests/testing/: test_search_strategies.py
