[tool.poetry]
name = "chronos"
version = "0.1.0"
description = ""
authors = [
    "andrysiaczek <agata.and.11@gmail.com>",
    "Kuba Karmiński <kuba.karminski@bethink.pl>",
    "Miłosz Bednarzak <milosz.bednarzak@bethink.pl>"
]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.0"
datatosk = "^1.0.0"
python-dotenv = "^0.14.0"
tqdm = "^4.48.2"
pandera = "^0.4.4"
pythink-toolbox = "^1.0.0"
pymongo = "^3.11.0"
fastapi = "^0.61.1"
uvicorn = "^0.11.8"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.4.4"
pytest = "^6.0.1"
pytest-mock = "^3.3.1"
coverage = { version = "^5.1",  extras = ["toml"] }
pytest-cov = "^2.10.1"
hypothesis = { version = "^5.30.0",  extras = ["numpy", "pandas"] }
mypy = "^0.782"
nox = "^2020.5.24"
pre-commit = "^2.6.0"

[tool.poetry.scripts]
cli = 'cli:main'

[tool.pytest.ini_options]
minversion = "6.0"

markers = "integration: Mark test as integration"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
data_file = "coverage/.coverage"
source = ["src"]

[tool.coverage.report]
show_missing = true
fail_under = 40 #TODO cover more code

[tool.coverage.html]
directory = "coverage/html_report"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
