[tool.poetry]
name = "chronos"
version = "0.1.0"
description = ""
authors = [
    "andrysiaczek <agata.and.11@gmail.com>",
    "Kuba Karmiński <kuba.karminski@bethink.pl>",
    "Miłosz Bednarzak <milosz.bednarzak@bethink.pl>"
]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.0"
datatosk = "^1.0.0"
python-dotenv = "^0.15.0"
tqdm = "^4.53.0"
pandera = "^0.4.4"
pythink-toolbox = "^1.0.0"
pymongo = "^3.11.1"
fastapi = "^0.61.1"
uvicorn = "^0.12.3"
sentry-sdk = "^0.17.4"
pytest-steps = "^1.7.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.4.4"
pytest = "^6.0.1"
pytest-mock = "^3.3.1"
coverage = { version = "^5.1",  extras = ["toml"] }
pytest-cov = "^2.10.1"
hypothesis = { version = "^5.41.3",  extras = ["numpy", "pandas"] }
mypy = "^0.782"
nox = "^2020.5.24"
pre-commit = "^2.6.0"
freezegun = "^1.0.0"
colorama = "^0.4.4"

[tool.poetry.scripts]
cli = 'cli:cli_main'

[tool.pylint.'MESSAGES CONTROL']
disable = [
     "format",
     "missing-module-docstring",
     "duplicate-code" # https://github.com/PyCQA/pylint/issues/214
]

[tool.pylint.'BASIC']
good-names = [ "df", "x", "y", "i", "ci" ]
docstring-min-length = 4

[tool.pylint.'MISCELLANEOUS']
notes = "FIXME"

[tool.pylint.'SIMILARITIES']
ignore-imports = "yes"

[tool.pytest.ini_options]
minversion = "6.0"
markers = [
    "integration: Mark test as an integration test",
    "e2e: Mark test as an end-to-end test"
]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
data_file = "coverage/.coverage"
source = ["src"]
omit = ["src/chronos/api/generate_api_doc.py"]

[tool.coverage.report]
show_missing = true
fail_under = 96 #TODO cover/explicitly omit all code

[tool.coverage.html]
directory = "coverage/html_report"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
